# spawn-multisig

./: Cargo.toml
src/: lib.rs  multisig.rs
tests/: test.rs
