[package]
name = "spawn-multisig"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"             # Rastgele anahtar üretimi için
secp256k1 = "0.22"       # ECDSA ve Schnorr imzaları için kriptografi kütüphanesi
serde = { version = "1.0", features = ["derive"] }  # Seri hale getirme işlemleri için
serde_json = "1.0"       # JSON desteği
